--- a/gacha_viewer.html
+++ b/gacha_viewer.html
@@ -52,7 +52,7 @@
   <div class="container">
     <header style="margin-bottom:16px">
       <h1>ガチャ結果ビューア <span class="tag">v10</span></h1>
-      <div class="muted">ガチャ結果をまとめたJSONを読み込み、ビジュアル化し、zipファイルにする</div>
+      <div class="muted">ガチャ結果をまとめたJSONを読み込み、ビジュアル化し、zipファイルにできます</div>
     </header>
 
     <section class="toolbar">
